; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/kernel/extr_cacheinfo.c_cache_associativity.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/kernel/extr_cacheinfo.c_cache_associativity.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cache = type { i32 }

@ENODEV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cache*, i32*)* @cache_associativity to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cache_associativity(%struct.cache* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.cache*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.cache* %0, %struct.cache** %4, align 8
  store i32* %1, i32** %5, align 8
  %9 = load %struct.cache*, %struct.cache** %4, align 8
  %10 = call i64 @cache_nr_sets(%struct.cache* %9, i32* %7)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  br label %45

13:                                               ; preds = %2
  %14 = load i32, i32* %7, align 4
  %15 = icmp eq i32 %14, 1
  br i1 %15, label %16, label %18

16:                                               ; preds = %13
  %17 = load i32*, i32** %5, align 8
  store i32 0, i32* %17, align 4
  store i32 0, i32* %3, align 4
  br label %48

18:                                               ; preds = %13
  %19 = load %struct.cache*, %struct.cache** %4, align 8
  %20 = call i64 @cache_get_line_size(%struct.cache* %19, i32* %6)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %18
  br label %45

23:                                               ; preds = %18
  %24 = load %struct.cache*, %struct.cache** %4, align 8
  %25 = call i64 @cache_size(%struct.cache* %24, i32* %8)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %28

27:                                               ; preds = %23
  br label %45

28:                                               ; preds = %23
  %29 = load i32, i32* %7, align 4
  %30 = icmp ugt i32 %29, 0
  br i1 %30, label %31, label %37

31:                                               ; preds = %28
  %32 = load i32, i32* %8, align 4
  %33 = icmp ugt i32 %32, 0
  br i1 %33, label %34, label %37

34:                                               ; preds = %31
  %35 = load i32, i32* %6, align 4
  %36 = icmp ugt i32 %35, 0
  br i1 %36, label %38, label %37

37:                                               ; preds = %34, %31, %28
  br label %45

38:                                               ; preds = %34
  %39 = load i32, i32* %8, align 4
  %40 = load i32, i32* %7, align 4
  %41 = udiv i32 %39, %40
  %42 = load i32, i32* %6, align 4
  %43 = udiv i32 %41, %42
  %44 = load i32*, i32** %5, align 8
  store i32 %43, i32* %44, align 4
  store i32 0, i32* %3, align 4
  br label %48

45:                                               ; preds = %37, %27, %22, %12
  %46 = load i32, i32* @ENODEV, align 4
  %47 = sub nsw i32 0, %46
  store i32 %47, i32* %3, align 4
  br label %48

48:                                               ; preds = %45, %38, %16
  %49 = load i32, i32* %3, align 4
  ret i32 %49
}

declare dso_local i64 @cache_nr_sets(%struct.cache*, i32*) #1

declare dso_local i64 @cache_get_line_size(%struct.cache*, i32*) #1

declare dso_local i64 @cache_size(%struct.cache*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
